home screen trying

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -1,3 +1,8 @@
 {
-    "home.title": "Accueil"
+    "home.title": "Bonjour,",
+    "home.subtitle": "Que voulez vous faire aujourd'hui ?",
+    "home.freeTraining": "Entraînement libre",
+    "home.tournament": "Tournoi",
+    "home.bows": "Mes arcs",
+    "home.settings": "Paramètres"
 }
